frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.css
.job-info-container .profile-card{
  min-height: 120px;
}
.top-pad{
	margin-top: 0rem;
}
.cus-mt {
  margin-top: 2.5rem !important;
}
.btn-fltr {
    color: #212529;
    background-color: #ffffff;
    border-color: #ffffff;
    box-shadow: 2px 2px 2px 1px #dfdfdf;
    margin-right: 10px;
    margin-bottom: 14px;
    padding: 4px 8px;
    font-size: 12px;
}
.btn-fltr:hover {

    box-shadow: 3px 3px 3px 2px #4caf5057;
    color: #000;
    background-color: #e2e6ea;
    border-color: #dae0e5;
}
.btn-fltr-active {
    background-color: #e2e6ea;
    border-color: #dae0e5;
    box-shadow: 3px 3px 3px 2px #4caf5057;
    color: #000;
}
.job-cards h6 {
    font-weight: 700;
    font-size: 13px;
    color: #465666;
    margin-bottom: 7px;
}
.isMatchesView{
	padding:0px !important;
}
.btn-outline-green a:hover {
    color: #fff;
    text-decoration: none;
}
.btn-outline-green a {
    color: #11b771;
    text-decoration: none;
}
.isMatchesViewFont{
	font-size:12px !important;
}

